# ECommerence_fullstack

./: .gitignore  Get  README.md  docker-compose.yml  run_docker_all.bat
aimodule/: main.py  pyproject.toml
aimodule/config/: logging.py  settings.py
aimodule/db/: utils.py
aimodule/db/aimodule_db/: __init__.py
aimodule/db/aimodule_db/entities/: __init__.py
aimodule/db/aimodule_db/repositories/: session_repository.py
aimodule/db/backend_db/: __init__.py  queries.py  query.py
aimodule/db/backend_db/entities/: __init__.py
aimodule/db/backend_db/repositories/: order_item_repository.py  order_repository.py  product_repository.py  product_vendor_repository.py  vendor_repository.py
aimodule/db/ultils/: old_codes_but_gold.txt  repository_ultil.py
aimodule/langgraph/llms/: gemini.py
aimodule/langgraph/states/: __init__.py
aimodule/langgraph_ai/llms/: gemini.py
aimodule/langgraph_ai/nodes/: __init__.py  cart_find.py  intent_classifier.py  product_find.py
aimodule/langgraph_ai/services/: order_service.py  product_service.py
aimodule/langgraph_ai/states/: __init__.py
aimodule/langgraph_ai/ultils/: text_ultil.py
aimodule_db/: compose.aimodule_db.yml  langgraph_schema.drawio  sample_query.sql
backend/: Dockerfile  README.md  compose.backend.yml  kill_port3100.cmd  pom.xml
backend_db/: compose.backend_db.yml  run_all.bat  sample_query.sql
sql/: 10_trigger_append_base_ent.sql  15_accounts.sql  30_trigger_check_role.sql  50_orders.sql  55_orders_items.sql  60_payments.sql  99_sample_datas.sql  run_all.bat  sample_query.sql  schema_ERdiagram.drawio
(+125 files in other folders)
